--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -75,8 +75,7 @@
               "browserTarget": "frontend:build:production"
             },
             "development": {
-              "browserTarget": "frontend:build:development",
-              "proxyConfig": "src/proxy.conf.json"
+              "browserTarget": "frontend:build:development"
             }
           },
           "defaultConfiguration": "development"
